# fess-mcp-server

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.test  LICENSE  README.md  docker-compose.yaml  fess_mcp_server.py  pyproject.toml
tests/integration/: test_fess_integration.py
tests/unit/: __init__.py  test_fess_mcp_server.py  test_utils.py
