[project]
name = "fess-mcp"
version = "0.1.0"
description = "FESS検索エンジンを使用したMCPツール"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=0.3.23",
    "mcp>=1.6.0",
    "primp>=0.14.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=fess_mcp_server --cov-report=term-missing"
